Run dependency build before template

--- a/.github/workflows/validate-k8s-manifests.yaml
+++ b/.github/workflows/validate-k8s-manifests.yaml
@@ -44,5 +44,6 @@ jobs:
           echo "Validating helm in directory: ${dir}"
 
           helm lint "${dir}"
+          (cd "${dir}" && helm dependency build)
           helm template "${dir}" -f "${dir}/values.yaml"
         done <<< "${helm_dirs}"
