Update kustomization wf

--- a/.github/workflows/validate-k8s-manifests.yaml
+++ b/.github/workflows/validate-k8s-manifests.yaml
@@ -22,6 +22,7 @@ jobs:
         while read dir; do
           echo "Validating kustomization in directory: ${dir}"
 
+          (cd "${dir}" && helm dependency build)
           kubectl kustomize "${dir}" --enable-helm
         done <<< "${kustomization_dirs}"
 
