Run dependency build if needed

--- a/.github/workflows/validate-k8s-manifests.yaml
+++ b/.github/workflows/validate-k8s-manifests.yaml
@@ -22,7 +22,9 @@ jobs:
         while read dir; do
           echo "Validating kustomization in directory: ${dir}"
 
-          (cd "${dir}" && helm dependency build)
+          if [[ -f "${dir}/Chart.yaml" ]]; then
+            (cd "${dir}" && helm dependency build)
+          fi
           kubectl kustomize "${dir}" --enable-helm
         done <<< "${kustomization_dirs}"
 
